--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <groupId>org.webjars</groupId>
     <artifactId>bootstrap</artifactId>
     <name>Bootstrap</name>
-    <version>4.5.4-SNAPSHOT</version>
+    <version>5.0.0-beta1-SNAPSHOT</version>
     <packaging>jar</packaging>
     <description>WebJar for Bootstrap</description>
     <url>http://webjars.org</url>
@@ -19,13 +19,8 @@
     <dependencies>
         <dependency>
             <groupId>org.webjars</groupId>
-            <artifactId>jquery</artifactId>
-            <version>3.5.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.webjars</groupId>
             <artifactId>popper.js</artifactId>
-            <version>1.16.0</version>
+            <version>2.5.4</version>
         </dependency>
     </dependencies>
 
@@ -63,7 +58,7 @@
                     "bootstrap-css": "css/bootstrap"
                 },
                 "shim": {
-                    "bootstrap": [ "jquery", "popper" ]
+                    "bootstrap": ["popper"]
                 }
             }
         </requirejs>
@@ -95,7 +90,7 @@
                         <goals><goal>download-single</goal></goals>
                         <configuration>
                             <url>${sourceUrl}</url>
-                            <fromFile>v${version.unrevise}.zip</fromFile>
+                            <fromFile>v${version.unsnapshot}.zip</fromFile>
                             <toFile>${project.build.directory}/${project.artifactId}.zip</toFile>
                         </configuration>
                     </execution>
@@ -115,10 +110,10 @@
                                 <unzip src="${project.build.directory}/${project.artifactId}.zip" dest="${project.build.directory}" />
                                 <echo message="moving resources" />
                                 <move todir="${destDir}">
-                                    <fileset dir="${project.build.directory}/bootstrap-${version.unrevise}/dist" />
+                                    <fileset dir="${project.build.directory}/bootstrap-${version.unsnapshot}/dist" />
                                 </move>
                                 <move todir="${destDir}/scss">
-                                    <fileset dir="${project.build.directory}/bootstrap-${version.unrevise}/scss" />
+                                    <fileset dir="${project.build.directory}/bootstrap-${version.unsnapshot}/scss" />
                                 </move>
                             </target>
                         </configuration>
