--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <groupId>org.webjars</groupId>
     <artifactId>bootstrap</artifactId>
     <name>Bootstrap</name>
-    <version>4.6.0</version>
+    <version>4.6.0-1-SNAPSHOT</version>
     <packaging>jar</packaging>
     <description>WebJar for Bootstrap</description>
     <url>http://webjars.org</url>
@@ -19,8 +19,13 @@
     <dependencies>
         <dependency>
             <groupId>org.webjars</groupId>
+            <artifactId>jquery</artifactId>
+            <version>3.5.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
             <artifactId>popper.js</artifactId>
-            <version>2.5.4</version>
+            <version>1.16.0</version>
         </dependency>
     </dependencies>
 
@@ -36,7 +41,7 @@
         <url>http://github.com/webjars/bootstrap</url>
         <connection>scm:git:https://github.com/webjars/bootstrap.git</connection>
         <developerConnection>scm:git:https://github.com/webjars/bootstrap.git</developerConnection>
-        <tag>bootstrap-4.6.0</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <developers>
@@ -58,7 +63,7 @@
                     "bootstrap-css": "css/bootstrap"
                 },
                 "shim": {
-                    "bootstrap": ["popper"]
+                    "bootstrap": [ "jquery", "popper" ]
                 }
             }
         </requirejs>
@@ -90,7 +95,7 @@
                         <goals><goal>download-single</goal></goals>
                         <configuration>
                             <url>${sourceUrl}</url>
-                            <fromFile>v${version.unsnapshot}.zip</fromFile>
+                            <fromFile>v${version.unrevise}.zip</fromFile>
                             <toFile>${project.build.directory}/${project.artifactId}.zip</toFile>
                         </configuration>
                     </execution>
@@ -110,10 +115,10 @@
                                 <unzip src="${project.build.directory}/${project.artifactId}.zip" dest="${project.build.directory}" />
                                 <echo message="moving resources" />
                                 <move todir="${destDir}">
-                                    <fileset dir="${project.build.directory}/bootstrap-${version.unsnapshot}/dist" />
+                                    <fileset dir="${project.build.directory}/bootstrap-${version.unrevise}/dist" />
                                 </move>
                                 <move todir="${destDir}/scss">
-                                    <fileset dir="${project.build.directory}/bootstrap-${version.unsnapshot}/scss" />
+                                    <fileset dir="${project.build.directory}/bootstrap-${version.unrevise}/scss" />
                                 </move>
                             </target>
                         </configuration>
